--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,34 @@
 services:
-  # Database (Keep as is)
+  # MySQL Database
   db:
-    image: postgres:15
+    image: mysql:8.0
     container_name: task-db
     environment:
-      POSTGRES_DB: taskdb
-      POSTGRES_USER: taskuser
-      POSTGRES_PASSWORD: password123
+      MYSQL_DATABASE: taskdb
+      MYSQL_ROOT_PASSWORD: 
     ports:
-      - "5432:5432"
+      - "3306:3306"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - mysql_data:/var/lib/mysql
 
   # Backend Service
   backend:
-    build: ./Project_Tasks_Management   
+    build: ./Project_Tasks_Management
     container_name: task-api
     ports:
       - "8080:8080"
     depends_on:
       - db
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/taskdb
-      SPRING_DATASOURCE_USERNAME: taskuser
+      # Note the 'mysql' in the URL and the correct driver
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/taskdb?allowPublicKeyRetrieval=true&useSSL=false
+      SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: password123
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
 
-  # Frontend Service
+  # Frontend Service (Stays the same)
   frontend:
-    build: ./project-management-frontend 
+    build: ./project-management-frontend
     container_name: task-ui
     ports:
       - "3000:80"
@@ -36,4 +36,4 @@ services:
       - backend
 
 volumes:
-  postgres_data:
+  mysql_data:  # <--- Changed name from postgres_data
