--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mysql:8.0
     container_name: task-db
     environment:
-      MYSQL_DATABASE: taskdb
+      MYSQL_DATABASE: PG_Management
       MYSQL_ROOT_PASSWORD: 
     ports:
       - "3306:3306"
